# MCI-Slayer

./: Angabe.txt  CMakeLists.txt  GameConfig.cpp  GameConfig.h  Makefile  README.md  character.cpp  character.h  fighter.cpp  fighter.h  hero.cpp  hero.h  inventory.cpp  inventory.h  item.cpp  item.h  main.cpp  npc.cpp  room.cpp  room.h  schurke.cpp  schurke.h  sorcerer.cpp  sorcerer.h  world.cpp  world.h
